syntax = "proto3";

package session;
import "google/protobuf/empty.proto";

message LoginRequest {
  string ident = 1;
  string pwd = 2;
  string totp = 3;
}

service SessionService {
  rpc Login(session.LoginRequest) returns (google.protobuf.Empty);
  rpc Logout(google.protobuf.Empty) returns (google.protobuf.Empty);
}